https://app.clickup.com/t/8692ybp2t - fixed back button visibility

--- a/CMS/static/scss/partials/new_course_detail.scss
+++ b/CMS/static/scss/partials/new_course_detail.scss
@@ -272,7 +272,9 @@
         border: none;
         background-color: transparent;
         position: absolute;
-        top: 110px;
+        top: 199px;
+        z-index: 999;
+        left:7%;
 
         .course-detail__nav-control-icon {
           height: 12px;
@@ -285,7 +287,7 @@
           margin-left: auto;
           font-family: 'Nunito Sans', sans-serif;
           font-size: 1rem;
-          color: white;
+          color: black;
           font-weight: normal;
         }
       }
